--- a/checkifPDFImg.ipynb
+++ b/checkifPDFImg.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -57,7 +57,7 @@
     "    'Phrase': [],\n",
     "    \"Times Found\": []\n",
     "}\n",
-    "\n",
+    "    \n",
     "errorsDic = []\n",
     "\n",
     "frase = 'bando'\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 40
+     "execution_count": 4
     }
    ],
    "source": [
@@ -114,41 +114,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(dic)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                                                Title  Times Found     Type\n",
-       "0    2_JPAL_Workshop_Theory and Measurement_MAbel.pdf            0  Scanned\n",
-       "1                    BANDO-OAX-ASUNCIONCUYOTEPEJI.pdf            1  Scanned\n",
-       "2                           BANDO-OAX-ASUNCIONOCH.pdf            0  Scanned\n",
-       "3                     BANDO-OAX-CAPULAPAMDEMENDEZ.pdf            1  Scanned\n",
-       "4                         BANDO-OAX-CIUDADIXTEPEC.pdf            1  Scanned\n",
-       "..                                                ...          ...      ...\n",
-       "324                   REGLAMENTOPOL-GTO-SALAMANCA.pdf            4     Text\n",
-       "325                       REGLAMENTOPOL-GTO-VALLE.pdf           20     Text\n",
-       "326                         REGLAMENTO_NAY_TUXPAN.pdf            0  Scanned\n",
-       "327                        REGLAMENTO_NAY_XALISCO.pdf            0  Scanned\n",
-       "328                              TBANDO_YUCA_EABO.pdf            0  Scanned\n",
+       "                         Title     Type Phrase  Times Found\n",
+       "0        Bando_BCS_Comondu.pdf  Scanned  BANDO            0\n",
+       "1        Bando_BCS_Comondu.pdf  Scanned  BANDO            0\n",
+       "2        Bando_BCS_Comondu.pdf  Scanned  BANDO            0\n",
+       "3        Bando_BCS_Comondu.pdf  Scanned  BANDO            0\n",
+       "4        Bando_BCS_Comondu.pdf  Scanned  BANDO            0\n",
+       "...                        ...      ...    ...          ...\n",
+       "4897    BANDO-ZAC-TRINIDAD.pdf     Text  BANDO            6\n",
+       "4898    BANDO-ZAC-TRINIDAD.pdf  Scanned  BANDO            0\n",
+       "4899    BANDO-ZAC-TRINIDAD.pdf     Text  BANDO            8\n",
+       "4900  BANDO-ZAC-VILLADECOS.pdf     Text  BANDO            1\n",
+       "4901  BANDO-ZAC-VILLADECOS.pdf  Scanned  BANDO            0\n",
        "\n",
-       "[329 rows x 3 columns]"
+       "[4902 rows x 4 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Title</th>\n      <th>Times Found</th>\n      <th>Type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2_JPAL_Workshop_Theory and Measurement_MAbel.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>BANDO-OAX-ASUNCIONCUYOTEPEJI.pdf</td>\n      <td>1</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>BANDO-OAX-ASUNCIONOCH.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>BANDO-OAX-CAPULAPAMDEMENDEZ.pdf</td>\n      <td>1</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>BANDO-OAX-CIUDADIXTEPEC.pdf</td>\n      <td>1</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>324</th>\n      <td>REGLAMENTOPOL-GTO-SALAMANCA.pdf</td>\n      <td>4</td>\n      <td>Text</td>\n    </tr>\n    <tr>\n      <th>325</th>\n      <td>REGLAMENTOPOL-GTO-VALLE.pdf</td>\n      <td>20</td>\n      <td>Text</td>\n    </tr>\n    <tr>\n      <th>326</th>\n      <td>REGLAMENTO_NAY_TUXPAN.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>327</th>\n      <td>REGLAMENTO_NAY_XALISCO.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>328</th>\n      <td>TBANDO_YUCA_EABO.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n  </tbody>\n</table>\n<p>329 rows × 3 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Title</th>\n      <th>Type</th>\n      <th>Phrase</th>\n      <th>Times Found</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Bando_BCS_Comondu.pdf</td>\n      <td>Scanned</td>\n      <td>BANDO</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Bando_BCS_Comondu.pdf</td>\n      <td>Scanned</td>\n      <td>BANDO</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Bando_BCS_Comondu.pdf</td>\n      <td>Scanned</td>\n      <td>BANDO</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Bando_BCS_Comondu.pdf</td>\n      <td>Scanned</td>\n      <td>BANDO</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Bando_BCS_Comondu.pdf</td>\n      <td>Scanned</td>\n      <td>BANDO</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>4897</th>\n      <td>BANDO-ZAC-TRINIDAD.pdf</td>\n      <td>Text</td>\n      <td>BANDO</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>4898</th>\n      <td>BANDO-ZAC-TRINIDAD.pdf</td>\n      <td>Scanned</td>\n      <td>BANDO</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4899</th>\n      <td>BANDO-ZAC-TRINIDAD.pdf</td>\n      <td>Text</td>\n      <td>BANDO</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>4900</th>\n      <td>BANDO-ZAC-VILLADECOS.pdf</td>\n      <td>Text</td>\n      <td>BANDO</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4901</th>\n      <td>BANDO-ZAC-VILLADECOS.pdf</td>\n      <td>Scanned</td>\n      <td>BANDO</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>4902 rows × 4 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 42
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(dic)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                                     Title  Times Found     Type\n",
+       "0                   BANDO-JAL-ATEMAJAC.pdf            0  Scanned\n",
+       "1                BANDO-JAL-Aototonilco.pdf            0  Scanned\n",
+       "2    BANDO-JAL-La Manzanilla de la Paz.pdf            0  Scanned\n",
+       "3                    BANDO-JAL-OCOTLAN.pdf            0  Scanned\n",
+       "4       BANDO-JAL-SANSEBASTIANDELOESTE.pdf            0  Scanned\n",
+       "..                                     ...          ...      ...\n",
+       "146       REGLAMENTOINT_CHI_FRANCISCOL.pdf            4     Text\n",
+       "147           REGLAMENTOSEG-JAL-TONILA.pdf            0  Scanned\n",
+       "148              REGLAMENTO_NAY_TUXPAN.pdf            0  Scanned\n",
+       "149             REGLAMENTO_NAY_XALISCO.pdf            0  Scanned\n",
+       "150                   TBANDO_YUCA_EABO.pdf            0  Scanned\n",
+       "\n",
+       "[151 rows x 3 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Title</th>\n      <th>Times Found</th>\n      <th>Type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>BANDO-JAL-ATEMAJAC.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>BANDO-JAL-Aototonilco.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>BANDO-JAL-La Manzanilla de la Paz.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>BANDO-JAL-OCOTLAN.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>BANDO-JAL-SANSEBASTIANDELOESTE.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>146</th>\n      <td>REGLAMENTOINT_CHI_FRANCISCOL.pdf</td>\n      <td>4</td>\n      <td>Text</td>\n    </tr>\n    <tr>\n      <th>147</th>\n      <td>REGLAMENTOSEG-JAL-TONILA.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>148</th>\n      <td>REGLAMENTO_NAY_TUXPAN.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>149</th>\n      <td>REGLAMENTO_NAY_XALISCO.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n    <tr>\n      <th>150</th>\n      <td>TBANDO_YUCA_EABO.pdf</td>\n      <td>0</td>\n      <td>Scanned</td>\n    </tr>\n  </tbody>\n</table>\n<p>151 rows × 3 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 6
     }
    ],
    "source": [
@@ -159,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
